[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Perfect DOS VGA 437 Win.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Graphics/homepage/parallax homescreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/homepage/arrow2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/homepage/arrow1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Apple Japanese Keyboard.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Fonts/PeaberryBase.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scene/Menuadditionimage.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Graphics/Image/easteregg/cloud6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Image/easteregg/duckeyeclosemouthclose.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Image/easteregg/duckeyeclose.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Image/easteregg/duck.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Image/easteregg/duck1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Image/easteregg/cloud7.png" type="Texture" id=15]
[ext_resource path="res://Assets/Graphics/Image/easteregg/cloud5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/Image/easteregg/silhouettecacahuette.png" type="Texture" id=17]
[ext_resource path="res://Assets/Graphics/Image/easteregg/cloud3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Image/easteregg/cloud4.png" type="Texture" id=19]
[ext_resource path="res://Assets/RUBBER DUCK.mp3" type="AudioStream" id=20]
[ext_resource path="res://Scripts/Nothingtoseehere.gd" type="Script" id=21]
[ext_resource path="res://Scene/Credits.tscn" type="PackedScene" id=22]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.740741, 1 )
colors = PoolColorArray( 0.494118, 0.85098, 0.203922, 1, 0.798306, 0.907093, 0.206875, 1, 0.898039, 0.92549, 0.207843, 1 )

[sub_resource type="DynamicFont" id=7]
size = 44
outline_color = Color( 0.996078, 0.996078, 0.996078, 1 )
extra_spacing_top = 2
extra_spacing_char = 2
extra_spacing_space = 3
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 29
outline_color = Color( 0.0196078, 0.054902, 0.12549, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.478431, 0.313726, 0.0156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.917647, 0.815686, 0.815686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.917647, 0.815686, 0.815686, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.937255, 0.792157, 0.439216, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.976471, 0.921569, 0.921569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color( 0.87451, 0.745098, 0.6, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.917647, 0.815686, 0.815686, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.823529, 0.658824, 0.345098, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15
shadow_size = 1

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=45]
size = 14
outline_color = Color( 0.662745, 0.509804, 0.576471, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=46]
default_font = SubResource( 45 )

[sub_resource type="SpriteFrames" id=47]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=48]
size = 42
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=49]
default_font = SubResource( 48 )

[sub_resource type="StyleBoxEmpty" id=50]

[sub_resource type="StyleBoxEmpty" id=53]

[sub_resource type="StyleBoxEmpty" id=54]

[sub_resource type="StyleBoxEmpty" id=52]

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 602.0
rect_scale = Vector2( 1, 0.998777 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.811765, 0.898039, 0.898039, 1 )

[node name="ParallaxHomescreen" type="Sprite" parent="."]
position = Vector2( 512, 241.707 )
scale = Vector2( 1.62367, 1.38417 )
texture = ExtResource( 4 )

[node name="Fallingleafsparticles" type="CPUParticles2D" parent="."]
position = Vector2( 13, 92 )
scale = Vector2( 3.52578, 6.0247 )
amount = 15
speed_scale = 0.1
randomness = 0.33
lifetime_randomness = 0.44
emission_shape = 2
emission_rect_extents = Vector2( 300, 1 )
spread = 180.0
gravity = Vector2( 0, 111 )
color = Color( 0.427451, 0.847059, 0.109804, 1 )
color_ramp = SubResource( 13 )
hue_variation = 0.51
hue_variation_random = 0.55

[node name="Titre" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 277.0
margin_top = 36.0
margin_right = 618.0
margin_bottom = 155.0
rect_scale = Vector2( 1.89974, 3.01013 )
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 8 )
custom_colors/default_color = Color( 1, 0.560784, 0.560784, 1 )
custom_constants/table_vseparation = -1
bbcode_enabled = true
bbcode_text = "
[wave  amp=50.0 freq=1.70]MMaki[/wave]"
tab_size = 1
text = "
MMaki"

[node name="ContainerBoutonCreer" type="MarginContainer" parent="."]
margin_left = 319.0
margin_top = 450.0
margin_right = 769.0
margin_bottom = 525.0
rect_scale = Vector2( 0.87265, 0.832148 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoutonCreer" type="Button" parent="ContainerBoutonCreer"]
margin_right = 450.0
margin_bottom = 75.0
theme = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0.537255, 0.796078, 0.25098, 1 )
custom_colors/font_color = Color( 0.423529, 0.560784, 0.333333, 1 )
custom_colors/font_color_hover = Color( 0.929412, 0.964706, 0.858824, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Créer une présentation"

[node name="Littlearrow" type="AnimatedSprite" parent="ContainerBoutonCreer"]
modulate = Color( 0.772549, 0.380392, 0.380392, 1 )
position = Vector2( 426.288, 34.8491 )
scale = Vector2( 0.116441, 0.105965 )
frames = SubResource( 11 )
frame = 1

[node name="ContainerBoutonOptions" type="MarginContainer" parent="."]
margin_left = 339.0
margin_top = 522.0
margin_right = 789.0
margin_bottom = 597.0
rect_scale = Vector2( 0.794334, 0.889062 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BoutonOptions" type="Button" parent="ContainerBoutonOptions"]
margin_right = 450.0
margin_bottom = 75.0
custom_colors/font_color_disabled = Color( 0.372549, 0.427451, 0.337255, 1 )
custom_colors/font_color_focus = Color( 0.423529, 0.560784, 0.333333, 1 )
custom_colors/font_color = Color( 0.423529, 0.560784, 0.333333, 1 )
custom_colors/font_color_hover = Color( 0.866667, 0.952941, 0.811765, 1 )
custom_colors/font_color_pressed = Color( 0.423529, 0.560784, 0.333333, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Ajout d'images"

[node name="Littlearrow" type="AnimatedSprite" parent="ContainerBoutonOptions"]
modulate = Color( 0.678431, 0.431373, 0.219608, 1 )
position = Vector2( 405.371, 37.1177 )
scale = Vector2( 0.163427, 0.115607 )
frames = SubResource( 12 )

[node name="Namenotentered" type="RichTextLabel" parent="."]
visible = false
margin_left = 341.0
margin_top = 513.0
margin_right = 728.0
margin_bottom = 536.0
theme = SubResource( 46 )
custom_colors/default_color = Color( 0.631373, 0.0509804, 0.0509804, 1 )
bbcode_enabled = true
bbcode_text = " [shake rate=15 level=9] Fonctionalité pas encore implémentée, sorry  [/shake] "
text = "  Fonctionalité pas encore implémentée, sorry   "

[node name="Menuadditionimage" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 58, 11 )
scale = Vector2( 1, 0.998777 )

[node name="Nothingtoseehere" type="HBoxContainer" parent="."]
visible = false
margin_left = 16.0
margin_top = 403.0
margin_right = 339.0
margin_bottom = 584.0
script = ExtResource( 21 )

[node name="Notaneasteregg" type="AnimatedSprite" parent="Nothingtoseehere"]
position = Vector2( 84, 127 )
scale = Vector2( 0.456693, 0.472917 )
frames = SubResource( 47 )
speed_scale = 0.7

[node name="Duckspeak" type="RichTextLabel" parent="Nothingtoseehere/Notaneasteregg"]
margin_left = -195.0
margin_top = -188.0
margin_right = 499.0
margin_bottom = -7.0
theme = SubResource( 49 )
custom_colors/default_color = Color( 0.368627, 0.305882, 0.027451, 1 )
bbcode_enabled = true
bbcode_text = "[tornado] En cas de problèmes, je suis toujours là pour discuter ! [/tornado]"
text = " En cas de problèmes, je suis toujours là pour discuter ! "

[node name="Pressme" type="Button" parent="Nothingtoseehere/Notaneasteregg"]
margin_left = -149.0
margin_top = -95.0
margin_right = 151.0
margin_bottom = 146.0
custom_styles/hover = SubResource( 50 )
custom_styles/pressed = SubResource( 53 )
custom_styles/focus = SubResource( 54 )
custom_styles/normal = SubResource( 52 )

[node name="Scream" type="AudioStreamPlayer2D" parent="Nothingtoseehere/Notaneasteregg"]
stream = ExtResource( 20 )

[node name="Creditsbutton" type="MarginContainer" parent="."]
margin_left = 952.0
margin_top = 373.0
margin_right = 1013.0
margin_bottom = 420.0

[node name="BoutonCredits" type="Button" parent="Creditsbutton"]
margin_right = 61.0
margin_bottom = 47.0

[node name="ducky" type="AnimatedSprite" parent="Creditsbutton"]
position = Vector2( 30, 20 )
scale = Vector2( 0.200855, 0.2 )
frames = SubResource( 55 )

[node name="Credits" parent="." instance=ExtResource( 22 )]
visible = false

[connection signal="button_up" from="ContainerBoutonCreer/BoutonCreer" to="." method="_on_BoutonCreer_button_up"]
[connection signal="mouse_entered" from="ContainerBoutonCreer/BoutonCreer" to="." method="_on_BoutonCreer_mouse_entered"]
[connection signal="mouse_exited" from="ContainerBoutonCreer/BoutonCreer" to="." method="_on_BoutonCreer_mouse_exited"]
[connection signal="mouse_entered" from="ContainerBoutonOptions/BoutonOptions" to="." method="_on_BoutonOptions_mouse_entered"]
[connection signal="mouse_exited" from="ContainerBoutonOptions/BoutonOptions" to="." method="_on_BoutonOptions_mouse_exited"]
[connection signal="pressed" from="ContainerBoutonOptions/BoutonOptions" to="." method="_on_BoutonOptions_pressed"]
[connection signal="button_up" from="Nothingtoseehere/Notaneasteregg/Pressme" to="Nothingtoseehere" method="_on_Pressme_button_up"]
[connection signal="button_up" from="Creditsbutton/BoutonCredits" to="." method="_on_BoutonCredits_button_up"]
